@@ -1,7 +1,7 @@
 #
 # Automated Testing Framework (atf)
 #
-# Copyright (c) 2007, 2008, 2009, 2010 The NetBSD Foundation, Inc.
+# Copyright (c) 2007, 2008, 2009, 2010, 2011 The NetBSD Foundation, Inc.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -394,7 +394,7 @@ atf_test_case()
     Defined_Test_Cases="${Defined_Test_Cases} ${1}"
 
     eval "${1}_head() { :; }"
-    eval "${1}_body() { :; }"
+    eval "${1}_body() { atf_fail 'Test case not implemented'; }"
     if [ "${2}" = cleanup ]; then
         Test_Cases_With_Cleanup="${Test_Cases_With_Cleanup} ${1}"
         eval "${1}_cleanup() { :; }"
