@@ -1,7 +1,7 @@
 #
 # Automated Testing Framework (atf)
 #
-# Copyright (c) 2007, 2008 The NetBSD Foundation, Inc.
+# Copyright (c) 2007, 2008, 2011 The NetBSD Foundation, Inc.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -235,6 +235,12 @@ tc_fail_body()
     exit 1
 }
 
+atf_test_case tc_missing_body
+tc_missing_body_head()
+{
+    atf_set "descr" "Helper test case for the t_tc test program"
+}
+
 # -------------------------------------------------------------------------
 # Helper tests for "t_tp".
 # -------------------------------------------------------------------------
@@ -280,6 +286,7 @@ atf_init_test_cases()
     atf_add_test_case tc_pass_false
     atf_add_test_case tc_pass_return_error
     atf_add_test_case tc_fail
+    atf_add_test_case tc_missing_body
 
     # Add helper tests for t_tp.
     [ -f $(atf_get_srcdir)/subrs ] && . $(atf_get_srcdir)/subrs
